Moved TrafficReplayer to be a sibling project to the capture ones. I had to fix some compilation errors and I've made some minor changes to the replayer build.gradle file and sourceSets to make them more gradle-standard.
Signed-off-by: Greg Schohn <schohn@amazon.com>